--- a/enums/attack-types.yaml
+++ b/enums/attack-types.yaml
@@ -21,7 +21,7 @@ stack-line:
   description: A variation of the stack where each player must be in a line with the targeted player to reduce the damage to survivable levels.
 cleave:
   name: cleave
-  description: Cleaves a portion (usually half) of the arena.
+  description: Inflicts avoidable damage in a specific area of the arena. Usually originates from the boss. Often expresses itself as a rectangular half-arena cleave, but it could also be a cone or triangular shaped [t:AoE].
 donut:
   name: donut
   description: An [t:AoE] that requires you to get close to its source.
@@ -40,9 +40,6 @@ dorito:
 spread:
   name: spread
   description: An unavoidable player-targeted [t:AoE]. Affected players must spread out from each other, as clipping each other with these AoEs usually leads to death.
-tether-proximity:
-  name: proximity tethers
-  description: A player is tethered to something or someone else, often either an enemy or another party member. Depending on the type of tether, they must either keep their tether short or long. Failing to do so may either inflict continuous damage while the tether is at the incorrect length, or instantly kills the affected party member(s) when the tether resolves.
 towers:
   name: towers
   description: Towers (in the form of circular areas on the ground) appear in the arena. Each tower must be occupied by at least one person. Some towers may need to be occupied by more than one person. If the incorrect number of players occupy a tower when it resolves, it will deal heavy damage and inflict debuffs to every party member, often killing the entire party instantly.
@@ -51,10 +48,10 @@ gaze:
   description: Players must look away from a given target (often the boss). Failing to do so in time usually inflicts a debilitating debuff or deals heavy damage.
 proximity:
   name: proximity
-  description: Proximity damage originates from a given source (usually a specific spot in the arena). The farther players are away from the source of the damage, the less damage they take.
-cone:
-  name: cone
-  description: A conal [t:AoE] aimed in a specific direction.
+  description: Proximity damage originates from some spot in the arena or an entity (like the boss) and does more damage to players the closer to its origin they are.
+distance:
+  name: distance
+  description: Players must be at the correct distance to something else in order to avoid debuffs and/or death. Usually expresses itself as a tether that must be kept either long or short.
 knockback:
   name: knockback
   description: Knocks back all players from a given location. Can be avoided using [a:7548] or [a:7559].
