--- a/raids/p12s1.yaml
+++ b/raids/p12s1.yaml
@@ -11,7 +11,7 @@ suffix: " Part 1"
 HP: 32790420
 average_hp: 73000
 autos:
-  target: MT
+  mechanic: auto.single
   type: magic
 wip: true
 description: |
