--- a/raids/p12s2.yaml
+++ b/raids/p12s2.yaml
@@ -11,7 +11,7 @@ suffix: " Part 2"
 HP: 40192744
 average_hp: 73000
 autos:
-  target: MT
+  mechanic: auto.single
   type: magic
 spoiler: true
 wip: true
