--- a/raids/p7s.yaml
+++ b/raids/p7s.yaml
@@ -11,7 +11,7 @@ boss: Agdistis
 HP: 29844576
 average_hp: 60000
 autos:
-  target: MTOT
+  mechanic: auto.double
   type: magic
 wip: true
 description: ""
