--- a/raids/p8s1.yaml
+++ b/raids/p8s1.yaml
@@ -11,7 +11,7 @@ suffix: " Part 1"
 HP: 29844576
 average_hp: 60000
 autos:
-  target: MT
+  mechanic: auto.single
   type: magic
 wip: true
 description: ""
