--- a/raids/p8s2.yaml
+++ b/raids/p8s2.yaml
@@ -11,7 +11,7 @@ suffix: " Part 2"
 HP: 29844576
 average_hp: 60000
 autos:
-  target: MT
+  mechanic: auto.single
   type: magic
 spoiler: true
 wip: true
