--- a/raids/p9s.yaml
+++ b/raids/p9s.yaml
@@ -57,6 +57,7 @@ actions:
   ravensclaw:  # Ravensclaw (for reference)
     id: 19148
     description: "A mechanic from <a href=\"/extremes/cinder-drift/\">Cinder Drift</a> wherein Ruby Weapon plunges its claw into the ground and spawns eight cracks in the ground with lights traveling alongside them. Once they reach the end of the crack, the lights explode in a small [m:aoe.chariot] [t:AoE]."
+    mechanic: aoe.chariot
   ravening:  # Ravening
     id: 33048
     description: |
